--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,9 +6,7 @@
 <body>
     <h1>Página 1</h1>
     <p>Esta é a primeira página.</p>
-    <a href="index.html2.html">Ir para a Página 2</a>
+    <a href="pagina2.html">Ir para a Página 2</a>
 </body>
 </html>
-
-
 
