--- a/pagina2.html
+++ b/pagina2.html
@@ -6,6 +6,7 @@
 <body>
     <h1>Página 2</h1>
     <p>Esta é a segunda página.</p>
-    <a href="index.html.html">Voltar para a Página 1</a>
+    <a href="index.html">Voltar para a Página 1</a>
+
 </body>
 </html>
